== Version 2.5.16 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # In menu entries with custom URLs, links are now opened in a new tab.
    # Some escaping issues have been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'CremeUser.has_perm()' works now correctly for link permission on models.
        # Javascript:
            * Dialog:
                - Add option 'propagateEvent':.
                    - When enabled, a copy of the event prefixed by 'dialog-' is triggered to allow the usage of external handlers (the dialog element if opened or the window.document).
                      It can be used with the new id option to listen a specific popup.
                      e.g: $(document).on('dialog-open', '#my-popup', function() { ... });
                - Add option 'id' to identify the dialog DOM element.
                - Add 'fitToFrameSize' & 'resize' methods to 'ui.dialog' widget.
                - Add 'cremeInstance' method to 'ui.dialog' widget : returns the creme.dialog.Dialog instance


== Version 2.5.14 & 2.5.15 ==

  Users side :
  ------------
    # Apps :
        * Documents :
            - The cloning of Document has been disabled.
        * Commercial :
            - The cloning of Strategy has been disabled.
        * Emails :
            - The cloning of Mailing List has been improved.
        * Graphs :
            - Cloning a Graph caused an error 500.
        * Polls :
            - The cloning of Campaigns & Replies has been disabled.
        * Recurrents :
            - The cloning of Generator has been disabled.


== Version 2.5.13 ==

  Users side :
  ------------
    # Several issues in the job scheduler has been fixed for periodic jobs :
        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.