@@ -4,6 +4,10 @@
   ------------
     # In menu entries with custom URLs, links are now opened in a new tab.
     # Some escaping issues have been fixed.
+    # Apps :
+        * Opportunities :
+            - In the blocks for related Invoices, Quotes & Sales Orders,
+              the color of the statuses were not displayed.
 
   Developers side :
   -----------------
